Fixed a visual error on mobile I didn't notice before

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -215,8 +215,8 @@ span .comment{
     }
     body img{
         float: center
-        width: 500%;
-        height: 500%;
+        width: 100%;
+        height: 100%;
         margin: 20px;
     }
 
